--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "description": "",
   "dependencies": {
     "express": "^4.15.5",
-    "hbs": "^4.0.1"
+    "hbs": "^4.0.1",
+    "lodash": "^4.17.4"
   }
 }
